unpackaged/main/default/objects/Item_Bundle__c/Item_Bundle__c.object-meta.xml
<CustomObject>
    <description>This is an object that defines the parent &amp; child relationship for Item Bundles</description>
    <label>Item Bundle</label>
    <nameField>
        <displayFormat>Bundle-{00000}</displayFormat>
        <label>Item Bundle ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Bundles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>