unpackaged/main/default/objects/Item_Bundle__c/fields/Child_Product__c.field-meta.xml
<CustomField>
    <fullName>Child_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the child product of a bundle</description>
    <inlineHelpText>Denotes the child product of a bundle</inlineHelpText>
    <label>Child Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parent Product</relationshipLabel>
    <relationshipName>Item_Bundle_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>