unpackaged/main/default/objects/Item_Bundle__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the parent product of a child product to a bundle</description>
    <inlineHelpText>Denotes the parent product of a child product to a bundle</inlineHelpText>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Child Products</relationshipLabel>
    <relationshipName>Item_Bundle_Child</relationshipName>
    <type>Lookup</type>
</CustomField>