unpackaged/main/default/objects/Item_Bundle__c/fields/Qty__c.field-meta.xml
<CustomField>
    <fullName>Qty__c</fullName>
    <description>The qty of the child products that are part of the parent. Eg. Parent A includes 5qty x Child A1, 10qty x Child A2.</description>
    <inlineHelpText>The qty of the child products that are part of the parent. Eg. Parent A includes 5qty x Child A1, 10qty x Child A2</inlineHelpText>
    <label>Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>