unpackaged/main/default/objects/Item_Bundle__c/fields/SNo__c.field-meta.xml
<CustomField>
    <fullName>SNo__c</fullName>
    <description>Denotes the Sequence number of child product</description>
    <inlineHelpText>Denotes the Sequence number of child product</inlineHelpText>
    <label>SNo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>