unpackaged/main/default/objects/Item_Bundle__c/fields/Upload_Tag__c.field-meta.xml
<CustomField>
    <fullName>Upload_Tag__c</fullName>
    <description>Populated while uploading Item Group mapping through data loader</description>
    <inlineHelpText>Populated while uploading Item Group mapping through data loader</inlineHelpText>
    <label>Upload_Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>