unpackaged/main/default/objects/Item_Bundle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Product__c</columns>
    <columns>Child_Product__c</columns>
    <columns>Qty__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>